# ModernCppCV

./: .gitignore  README.md  bullshit
BoW/: CMakeLists.txt
BoW/.cache/clangd/index/: bow_dictionary.cpp.BA00EE5CF9E9F244.idx  bow_dictionary.h.13D756C43ADA5A50.idx  codebook.cpp.8A142E748FFF0BDE.idx  codebook.h.777D8FA33D8E687E.idx  convert_dataset.cpp.9EDE2713E51CA001.idx  convert_dataset.hpp.1EC1BB7BED9110AF.idx  homework_7.h.783671B096AA3313.idx  serialize.cpp.1AEEEC60EB852437.idx  serialize.hpp.BA470DC711D1597E.idx  test_bow_dictionary.cpp.28CA703290AA54C9.idx  test_data.cpp.D3A37DF546CA30FE.idx  test_data.hpp.7B12851341016A9F.idx  test_kmeans.cpp.E435E9FC83715191.idx  test_utils.hpp.E193777CE2CA09D8.idx
BoW/include/: bow_dictionary.h  codebook.h  convert_dataset.hpp  homework_7.h
BoW/src/: bow_dictionary.cpp  codebook.cpp
BoW/tests/: CMakeLists.txt  test_bow_dictionary.cpp  test_data.cpp  test_kmeans.cpp
BoWHisto/: CMakeLists.txt
BoWHisto/include/: codebook.h  histogram.h  homework_9.h
BoWHisto/src/: codebook.cpp  histogram.cpp
BoWHisto/tests/: CMakeLists.txt  test_data.cpp
Image_Manager/: CMakeLists.txt
Image_Manager/.cache/clangd/index/: homework_6.h.CB78072FF9E28705.idx  image.cpp.F7D1C600C3E79D54.idx  image.hpp.6CEA6699F74EC217.idx  io_tools.cpp.8DE2282D83E3260A.idx  io_tools.hpp.750D18C0D4BE37C7.idx  test_from_file.cpp.C77CD694980CCC83.idx  test_histogram.cpp.5D4D0F6453EDE67F.idx  test_init.cpp.5D09D2781F8183FD.idx  test_resize.cpp.66143A5B27E1595A.idx
Image_Manager/include/: image.hpp
Image_Manager/src/: image.cpp
SIFT_Serial/: CMakeLists.txt
SIFT_Serial/include/: convert_dataset.hpp
SIFT_Serial/src/: convert_dataset.cpp  serialize.cpp
(+41 files in other folders)
